# stdio-ipc

./: .gitignore  README.md  go.mod  idea.md  next-steps.md
examples/router/child/: main.go
examples/router/parent/: main.go
examples/simple/child/: main.go
examples/simple/parent/: main.go
go/: constructors.go  endpoint.go  go.mod  ipc.go  router.go  utils.go
ipc/: constructors.go  endpoint.go  message.go  router.go
python/: README.md  pyproject.toml
python/ipc/: __init__.py  endpoint.py  router.py
